# 2cpptoy

./: meson.build
src/: main.cpp2
subprojects/: .gitignore  cppfront.wrap
subprojects/packagefiles/cppfront/: meson.build
